# wikigen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.cursor/rules/: agent.mdc  pocketflow-rules.mdc
.github/workflows/: ci.yml  release.yml  salt-docs.yml
docs/: CI.md  README.md  SALT-DOCS.md  salt-docs-cli.md
flows/: flow.py
nodes/: nodes.py
salt_docs/: __init__.py  cli.py  config.py  defaults.py
salt_docs/flows/: flow.py
salt_docs/formatter/: help_formatter.py  output_formatter.py
salt_docs/mcp/: __init__.py  chunking.py  embeddings.py  output_resources.py  search_index.py  server.py  vector_index.py
salt_docs/metadata/: __init__.py  logo.py  project.py  version.py
salt_docs/nodes/: nodes.py
salt_docs/utils/: adjust_headings.py  call_llm.py  crawl_github_files.py  crawl_local_files.py  version_check.py
scripts/: release.py
tests/: __init__.py  test_cli.py  test_mcp_tools.py  test_output_resources.py  test_search_index.py  test_version_check.py
tests/cli/: test_ci_integration.py  test_cli.py  test_version_check.py
tests/llm/: test_call_llm_routing.py  test_config_integration.py  test_llm_providers.py
tests/mcp/: test_mcp_tools.py  test_output_resources.py  test_search_index.py  test_semantic_search.py
tests/mode/: test_documentation_mode.py
utils/: adjust_headings.py
wikigen/: __init__.py  cli.py  config.py  defaults.py
wikigen/flows/: __init__.py  flow.py
wikigen/formatter/: help_formatter.py  init_formatter.py  output_formatter.py
wikigen/mcp/: __init__.py  chunking.py  server.py
wikigen/metadata/: __init__.py  logo.py  project.py  version.py
wikigen/nodes/: __init__.py  nodes.py
wikigen/utils/: call_llm.py  llm_providers.py  version_check.py
