[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salt-docs"
version = "0.1.2"
description = "Intelligent codebase analysis and documentation generation tool"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Mithun Ramesh"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
]
dependencies = ['pocketflow>=0.0.1', 'pyyaml>=6.0', 'requests>=2.28.0', 'gitpython>=3.1.0', 'google-genai>=1.9.0', 'pathspec>=0.11.0', 'keyring>=24.0.0']

[project.scripts]
salt-docs = "salt_docs.cli:main"

[project.urls]
Homepage = "https://github.com/convolution-labs/salt-docs-cli"
Repository = "https://github.com/convolution-labs/salt-docs-cli"
Issues = "https://github.com/convolution-labs/salt-docs-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["salt_docs*"]

